# supermusr-data-pipeline

./: .gitignore  .nixd.json  Cargo.toml  collector-output.txt  flake.nix
.github/workflows/: ci.yml
Benchmark/: data.json
Benchmark/Jupyter/: jupyter.ipynb  trace.ipynb
Benchmark/Shell/: lib.sh  simulator.sh
Benchmark/configs/: docker-compose.yaml  jaeger-ui.json  otel-collector-config.yml
Benchmark/docs/: Events Analyser.md  schematic.md
Python/: jupyter.ipynb
common/: Cargo.toml
common/src/: tracer.rs
diagnostics/: Cargo.toml
diagnostics/src/: frame_debug.rs  main.rs
diagnostics/src/daq_trace/: app.rs  mod.rs  ui.rs
digitiser-aggregator/src/: main.rs
digitiser-aggregator/src/frame/: cache.rs
docs/: dataflow.md  dataflow.sduml
docs/adr/: 0009-nexus-file-format.md
events-analyser/: Cargo.toml  README.md  default.nix  schematic.md
events-analyser/src/: analysis.rs  base.rs  main.rs  message_group.rs  message_pair.rs
events-to-histogram/src/: main.rs  processing.rs
kafka-daq-report/: Cargo.toml  README.md
nexus-writer/: Cargo.toml
nexus-writer/docs/: Dev.md  NexusFileStructure.md  NexusWriter.md  Traits.md
nexus-writer/src/: error.rs  main.rs
nexus-writer/src/elements/: attribute.rs  dataholder_class.rs  dataset.rs  group.rs  log_value.rs  mod.rs  traits.rs
nexus-writer/src/nexus/: builder.rs  engine.rs  mod.rs  run.rs  run_engine.rs  run_parameters.rs
nexus-writer/src/nexus/hdf5_file/: run_file.rs
nexus-writer/src/nexus/hdf5_file/run_file_components/: event_run_file.rs  runlog_file.rs  selog_file.rs
nexus-writer/src/nexus/messages/: eventlist.rs
nexus-writer/src/schematic/: dataset.rs  mod.rs  smod.rs
nexus-writer/src/schematic/elements/: attribute.rs  builder.rs  dataholder_class.rs  dataset.rs  error.rs  group.rs  log_value.rs  mod.rs  traits.rs
nexus-writer/src/schematic/elements/attribute/: builder.rs  mod.rs  underlying.rs
nexus-writer/src/schematic/elements/dataset/: builder.rs  mod.rs  underlying.rs
nexus-writer/src/schematic/elements_old/: error.rs  mod.rs
nexus-writer/src/schematic/elements_old/dataset/: mod.rs
nexus-writer/src/schematic/groups/: groups.rs  log.rs  mod.rs
nexus-writer/src/schematic/groups/raw_data/: data.rs  instrument.rs  mod.rs  periods.rs  runlog.rs  selog.rs  user.rs
nexus-writer/src/schematic/groups/raw_data/instrument/: detector.rs  mod.rs  source.rs
nexus-writer/src/schematic/groups/raw_data/sample/: environment.rs  geometry.rs  mod.rs
nix/overlays/: tdengine.nix
run-analyser/: Cargo.toml  default.nix
run-analyser/src/: analysis.rs  main.rs  message.rs
run-simulator/src/: main.rs
simulator/: Cargo.toml  data.json
simulator/src/: json.rs  main.rs  message.rs  muon.rs
simulator/src/integrated/: build_messages.rs
simulator/src/integrated/simulation_elements/: digitiser_config.rs  event_list.rs
tdengine/: Cargo.toml
trace-archiver-db/: Cargo.toml
trace-archiver-db/src/: main.rs
trace-archiver-tdengine/: Cargo.toml  default.nix
trace-archiver-tdengine/config/: taos.cfg
trace-archiver-tdengine/src/: benchmark.rs  main.rs
trace-archiver-tdengine/src/database/: error.rs  error_reporter.rs  framedata.rs  influxdb.rs  libtaos.rs  mod.rs
trace-archiver-tdengine/src/database/tdengine/: mod.rs  views.rs
trace-archiver-tdengine/src/tdengine/: framedata.rs  tdengine.rs  tdengine_views.rs  wrapper.rs
trace-generator/: Cargo.toml
trace-generator/src/: lib.rs
trace-reader/: Cargo.toml  default.nix
trace-reader/src/: lib.rs  loader.rs  main.rs  processing.rs
trace-simulator/: Cargo.toml
trace-simulator/src/: lib.rs  main.rs  messages.rs
trace-simulator/src/random/: generator.rs  mod.rs
trace-to-dsp-events/: Biexponential.ipynb  Cargo.toml  jupyter.ipynb
trace-to-dsp-events/Python/: Pipeline.ipynb  jupyter.ipynb
trace-to-dsp-events/src/: clap_structs.rs  commands.rs  dsp.rs  lib.rs  listen.rs  main copy.rs  main.rs  min_max_run.rs  partition.rs  tagged.rs  trace_run.rs
trace-to-dsp-events/src/detectors/: change_detector.rs  composite.rs  event_detector.rs  mod.rs  partitioner.rs  peak_detector.rs  pulse_detector.rs
trace-to-dsp-events/src/event_iterators/: mod.rs  pulse_formation.rs  save_to_file.rs
trace-to-dsp-events/src/events/: combine.rs  event.rs  iter.rs  mod.rs  multiple_events.rs
trace-to-dsp-events/src/modifiers/: mod.rs
trace-to-dsp-events/src/trace_iterators/: feedback.rs  find_baseline.rs  finite_difference.rs  load_from_trace_file.rs  mod.rs  save_to_file.rs  to_trace.rs
trace-to-dsp-events/src/window/: composite.rs  gate.rs  mod.rs  noise_smoothing_window.rs  smoothing_window.rs  trivial.rs
trace-to-events/: Cargo.toml  README.md  Untitled.sduml  Untitled.txt  jupyter.ipynb
trace-to-events/src/: main.rs  parameters.rs  processing.rs  timer.rs
trace-to-events/src/pulse_detection/: pulse.rs
trace-to-events/src/pulse_detection/detectors/: advanced_muon_detector.rs  basic_muon_detector.rs  mod.rs  threshold_detector.rs
trace-to-events/src/pulse_detection/iterators/: event.rs  save_to_file.rs
trace-to-events/src/pulse_detection/window/: adaptive_bin.rs  baseline.rs  finite_differences.rs  mod.rs  smoothing_window.rs
trace-to-pulses/: Cargo.toml
trace-to-pulses/src/: lib.rs  ode.rs  pulse.rs  tracedata.rs
trace-to-pulses/src/detectors/: basic_muon_detector.rs  change_detector.rs  composite.rs  mod.rs  muon_detector.rs  mydetector.rs  peak_detector.rs  pulse_detector.rs  threshold_detector.rs
trace-to-pulses/src/detectors/pulse_detector/: biexponential.rs  mod.rs  pulse_detector.rs
trace-to-pulses/src/events/: event.rs  iter.rs  mod.rs  save_to_file.rs
trace-to-pulses/src/trace_iterators/: feedback.rs  find_baseline.rs  iter.rs  load_from_trace_file.rs  memory.rs  mod.rs  save_to_file.rs  to_trace.rs
trace-to-pulses/src/window/: composite.rs  exponential_smoothing_window.rs  finite_differences.rs  gate.rs  iter.rs  mod.rs  noise_smoothing_window.rs  smoothing_window.rs  trivial.rs  weighted_smoothing_window.rs
