[package]
name = "events-analyser"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
env_logger.workspace = true
kagiyama.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
num.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_approx_eq.workspace = true
chrono.workspace = true
rand.workspace = true
