[package]
name = "kafka-daq-report"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
crossterm = "0.26.1"
env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
ratatui.workspace = true
ndarray.workspace = true
ratatui = "0.22.0"
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
