[package]
name = "trace-archiver-tdengine"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
streaming-types = { path = "../streaming-types" }


anyhow.workspace = true
chrono.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
rdkafka.workspace = true

async-trait = "0.1.68"
clap.workspace = true
itertools = "0.11.0"
#libtaos = { version = "0.4.5", default_features = false, features = ["stmt", "r2d2"] }
taos = { version = "0.10.16", default_features = false, features = ["native"] }
#influxdb = { version = "0.7.1", features = ["derive", "reqwest-client"] }

[dev-dependencies]
serde = "1.0.164"

[features]
default = ["benchmark"]
benchmark = []
