[package]
name = "trace-to-dsp-events"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
histogram = "0.7.4"
common = { path = "../common"}
trace-to-pulses = { path = "../trace-to-pulses"}
itertools = "0.11.0"
rand = "0.8.5"
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
dotenv = "0.15.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
serde.workspace = true

[features]
#default = []
