[package]
name = "trace-to-dsp-events"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common"}
streaming-types = { path = "../streaming-types" }
trace-to-pulses = { path = "../trace-to-pulses"}
trace-generator = { path = "../trace-generator"}
itertools = "0.11.0"
rand = "0.8.5"
anyhow.workspace = true
chrono.workspace = true
clap = { version = "4.0", features = ["derive", "env"] }
env_logger.workspace = true
rdkafka.workspace = true
log.workspace = true
tokio.workspace = true
dotenv = "0.15.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
serde.workspace = true

[features]
#default = []
