[package]
name = "trace-to-events"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
env_logger.workspace = true
log.workspace = true
num.workspace = true
rdkafka.workspace = true
supermusr-common.workspace = true
supermusr-streaming-types.workspace = true
tokio.workspace = true
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["time", "fmt", "tracing-log"]}

[dev-dependencies]
assert_approx_eq.workspace = true
chrono.workspace = true
rand.workspace = true
