[package]
name = "trace-to-pulses"
version = "0.1.0"
license = "GPL-3.0-only"
edition = "2021"

[dependencies]
common = { path = "../common"}

num = "0.4.1"
optimization = "0.2.0"
itertools = "0.11.0"
rand = "0.8.5"
anyhow = "1.0"
chrono = "0.4.22"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
dotenv = "0.15.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
serde = "1.0.164"

[features]
#default = []
